<resources>
    <string name="app_name">MDP Group 9</string>
    <string name="tab_text_1">Bluetooth</string>
    <string name="tab_text_2">Map Controls</string>
    <string name="tab_text_3">Challenges</string>
    <string name="tab_text_4">Communication</string>
    <string name="sent_text">Send</string>
    <string name="received_text">Receive</string>
    <string name="paired">Paired devices</string>
    <string name="discover">Discover devices</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <!--  Comms  -->
    <string name="send">SEND</string>
    <string name="configure">Reconfigure</string>
    <string name="f1">F1</string>
    <string name="f2">F2</string>

    <!-- Dialog -->
    <string name="reconfiguration">Reconfiguration</string>
    <string name="f1Title">F1:</string>
    <string name="f2Title">F2:</string>
    <string name="f1Placeholder">Enter F1 value</string>
    <string name="f2Placeholder">Enter F2 value</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>

    <!-- Map -->
    <string name="manual">MANUAL</string>
    <string name="auto">AUTO</string>
    <string name="turnon">ON</string>
    <string name="turnoff">OFF</string>
    <string name="bluetooth">BLUETOOTH</string>

</resources>
